@@ -1,6 +1,6 @@
 Package: lfactors
-Version: 1.0.0
-Date: 2016-12-09
+Version: 1.0.1
+Date: 2017-04-18
 Title: Factors with Levels
 Authors@R: c(person("Paul", "Bailey", role=c("aut", "cre"), email="pbailey@air.org"))
 Author: Paul Bailey [aut, cre]
